<resources>
    <string name="app_name">AppliNotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titre_menu">Menu</string>
    <string name="accueil_choix1">Voir mes notes</string>
    <string name="accueil_ma_moyenne">Ma moyenne : %1$s/20</string>
    <string name="note_sur_vingt">%1$d /20</string>
    <string name="btn_add_note">Ajouter la note</string>
    <string name="entete_coeff">Coeff</string>
    <string name="entete_note">Note</string>
    <string name="entete_matiere">Nom de la matière</string>
    <string name="add_note_title">Ajouter une nouvelle note</string>
    <string name="add_nom_matiere">Nom de la matière :</string>
    <string name="add_note">Note obtenue :</string>
    <string name="add_coeff_matiere">Coefficient de la matière :</string>
    <string name="add_matiere_error">Nom de la matière incorrect</string>
    <string name="add_note_error">Note incorrecte</string>
    <string name="add_coeff_error">Coeff incorrect</string>
    <string name="add_ok">Ajout OK</string>
    <string name="mod_note_title">Modifier la note</string>
    <string name="mod_coeff_matiere">Coefficient de la matière</string>
    <string name="btn_mod_note">Modifier la note</string>
    <string name="btn_add_a_note">Ajouter une note</string>
    <string name="choix_mod_rem">Choisissez une action :</string>
    <string name="modify">Modifier</string>
    <string name="remove">Supprimer</string>
    <string name="txt_btn_reset">!! RESET !!</string>
    <string name="menu_accueil">Accueil</string>
    <string name="menu_reset">Remise à zéro</string>
    <string name="menu_liste">Liste des notes</string>
    <string name="menu_add">Ajouter une note</string>
    <string name="txt_home">Bienvenu(e) sur cette application qui déchire. \nIci tu va pouvoir rentrer tes notes et connaitre ta moyenne sans te casser la tête. \nPour utiliser cette petite merveille, sert toi du menu en swipant de gauche à droite ;)</string>
    <string name="reset_message">Attention ! Cette action supprimera toutes les notes que vous avez renseigné !</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">Confirmer</string>
    <string name="add_coeff_annee">Année :</string>
    <string name="add_coeff_semestre">Semestre :</string>
    <string name="add_note_semestre1">1</string>
    <string name="add_note_semestre2">2</string>
    <string name="l1">Licence 1</string>
    <string name="l2">Licence 2</string>
    <string name="l3">Licence 3</string>
    <string name="m1">Master 1</string>
    <string name="m2">Master 2</string>
    <string name="entete_periode">Période</string>
    <string name="allyears">Toutes</string>
    <string name="allsemesters">1 et 2</string>
    <string name="empty_list_msg">Aucune note ne correspond à la recherche</string>
</resources>
