<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:notes="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mod_note_title"
        android:textColor="@color/gris_fonce"
        android:textSize="30sp"
        android:paddingTop="10dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_nom_matiere"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/mod_note_matiere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="text"
        notes:testType="regexp"
        notes:customRegexp="^[a-zA-Z]{2,30}$"
        notes:testErrorString="@string/add_matiere_error"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_note"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/mod_note_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="numberDecimal"
        notes:testType="regexp"
        notes:customRegexp="^([0-9]{1,2})|([0-9]{1,2}+.[0-9]{1,3})$"
        notes:testErrorString="@string/add_note_error"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mod_coeff_matiere"
        android:textSize="20sp"
        android:gravity="center_horizontal"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/mod_note_coeff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:inputType="number"
        notes:testType="regexp"
        notes:customRegexp="^[0-9]{1,2}$"
        notes:testErrorString="@string/add_coeff_error"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_coeff_annee"
        android:textSize="17sp"
        android:gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/mod_note_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_coeff_semestre"
        android:textSize="17sp"
        android:gravity="center_horizontal"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="100dp"
            android:button="@drawable/custom_radio_button"
            android:text="@string/add_note_semestre1"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radio12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio_button"
            android:text="@string/add_note_semestre2"
            android:textSize="20sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/button_mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/btn_mod_note"
        style="@style/Big_button_green"/>
</LinearLayout>