<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/moyenne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accueil_ma_moyenne"
        android:background="@color/moyenne"
        android:layout_marginTop="3dp"
        android:textSize="25sp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@color/entete">

        <TextView
            android:id="@+id/entete_annee"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="@string/entete_annee"
            android:layout_marginLeft="5dp"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/entete_matiere"
            android:textSize="16sp"
            android:layout_weight="2"
            android:gravity="center"/>

        <TextView
            android:id="@+id/entete_note"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:text="@string/entete_note"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/entete_coeff"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:text="@string/entete_coeff"
            android:textSize="16sp"
            android:gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/liste_notes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:background="@drawable/bg_liste"/>
</LinearLayout>